--- a/public/db/app.json
+++ b/public/db/app.json
@@ -31,9 +31,9 @@
       "title": "Hello",
       "author": "Emilly Blue",
       "publishedDate": "2024-06-03T22:00:00.000Z",
-      "category": "Movies",
-      "shortDescription": "ncwuqwndunwqdndqewewfedqw",
-      "content": "<p>wqddqddwq</p>",
+      "category": "",
+      "shortDescription": "Short description of article...",
+      "content": "<p>test</p>",
       "id": "yRZ2B_v"
     }
   ],
