Add AddCategoryForm component, add addCategory creator function and use it in AddCategoryForm, install package json-server and npm-run-all

--- a/public/db/app.json
+++ b/public/db/app.json
@@ -4,10 +4,10 @@
       "id": "1",
       "title": "Article title",
       "shortDescription": "Short description of the article...",
-      "content": "Main content of the article",
+      "content": "<p>Main content of the article</p>",
       "publishedDate": "2023-02-01",
       "author": "John Doe",
-      "category": "Sport"
+      "category": "Art"
     },
     {
       "id": "2",
