--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
-    "json-server": "^0.17.0",
+    "json-server": "^0.17.4",
+    "nanoid": "^5.0.7",
     "npm-run-all": "^4.1.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
@@ -22,7 +23,6 @@
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "sass": "^1.77.4",
-    "shortid": "^2.2.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
