--- a/public/db/app.json
+++ b/public/db/app.json
@@ -26,6 +26,15 @@
       "publishedDate": "2024-02-01",
       "author": "Amanda Smith",
       "category": "News"
+    },
+    {
+      "title": "Hello",
+      "author": "Amanda Lee",
+      "publishedDate": "2024-06-03T22:00:00.000Z",
+      "category": "Sport",
+      "shortDescription": "Test of short description....",
+      "content": "<p>Test</p>",
+      "id": "AgVo1Al"
     }
   ],
   "categories": [
