--- a/public/db/app.json
+++ b/public/db/app.json
@@ -7,7 +7,7 @@
       "content": "<p>Main content of the article</p>",
       "publishedDate": "2023-02-01",
       "author": "John Doe",
-      "category": "News"
+      "category": ""
     },
     {
       "id": "2",
@@ -38,8 +38,14 @@
     }
   ],
   "categories": [
-    "Sport",
-    "News",
-    "Movies"
+    {
+      "category": "Sport"
+    },
+    {
+      "category": "News"
+    },
+    {
+      "category": "Movies"
+    }
   ]
 }
